Update Main class